Style bottom third with toy content; add media query to fix off-center middle section on very narrow screens

--- a/style.css
+++ b/style.css
@@ -156,6 +156,58 @@ h3 {
   line-height: normal;
 }
 
+.contact {
+  margin-top: 40px;
+  background-color: #0c95b5;
+  display: grid;
+  grid-template-columns: 30px 1fr min-content;
+  padding: 50px 90px;
+  row-gap: 40px;
+}
+
+.contact h2, .contact p:first-of-type {
+  grid-column: 1 / 3;
+}
+
+.bottom-photo-container {
+  grid-row: 1 / 7;
+  grid-column: 3 / 4;  
+  height: 400px;
+}
+
+.bottom-photo {
+  height: 400px;
+}
+
+.contact p, .contact h2, .contact i {
+  color: white;
+}
+
+.contact p {
+  font-size: 16px;
+  margin: 0;
+  line-height: normal;
+  align-self: center;
+}
+
+.contact i {
+  font-size: 20px;
+}
+
+.contact h2 {
+  line-height: 1;
+}
+
+.contact .icon-container {
+  grid-column: 1 / 3;
+  display: flex;
+  gap: 32px;
+}
+
+.contact .icon {
+  width: 32px;
+}
+
 @media (max-width: 1099px) {
   .diagonal-stripe {
     transform: translate(0px, -300px) skewY(-16deg);
@@ -234,4 +286,31 @@ h3 {
     width: auto;
   }
   
+  .contact {
+  grid-template-columns: 30px 284px;
+  padding: 50px 0px 4px 0px;
+  justify-content: center;
+  }
+  
+  .bottom-photo-container {
+    grid-column: 1 / 3;
+    grid-row: 6 / 7;
+  }
+
+   .contact h2, .contact .icon-container {
+    justify-self: center;
+  }
+  
+  .contact p, .contact i {
+    margin-left: 54px;
+  }
+  
 }
+
+@media (max-width: 450px) {
+  .projects-container {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+  
